<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DeltMov"
    tools:showIn="@layout/activity_delt_mov">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/ShowTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Show_Mov_t"
                    android:text="Ganho"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/ShowSer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Show_Mov_s"
                    android:text="Comprars"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/ShowData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Ins_RegMov_Dat"
                    android:text="28/4/2019"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/ShsowAmo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Ins_RegMov_Amo"
                    android:text="5.00"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/ShowNot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Ins_RegMov_Not"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_style"
                android:onClick="Delete_Button"
                android:text="@string/Del"
                android:textColor="@drawable/txt_btn_style"
                tools:text="@string/Del" />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_style"
                android:onClick="Cancel_Button"
                android:text="@string/Cancel"
                android:textColor="@drawable/txt_btn_style"
                tools:text="@string/Cancel" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>