<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DelMov"
    tools:showIn="@layout/activity_del_mov">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_default">

                <TextView
                    android:id="@+id/ShowTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Show_Mov_t"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_default">

                <TextView
                    android:id="@+id/ShowSer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Show_Mov_s"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_default">

                <TextView
                    android:id="@+id/ShowData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Ins_RegMov_Dat"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_default">

                <TextView
                    android:id="@+id/ShsowAmo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Ins_RegMov_Amo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_default">

                <TextView
                    android:id="@+id/ShowNot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Ins_RegMov_Not"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>