<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DelAndUpServ"
    tools:showIn="@layout/activity_del_and_up_serv">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/ListServ"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_default"
                android:choiceMode="singleChoice" />

            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:onClick="Up_Button"
                android:text="@string/Upd"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:background="@drawable/btn_style"
                android:textColor="@drawable/txt_btn_style"/>

            <Button
                android:id="@+id/button18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:onClick="Del_Button"
                android:text="@string/Del"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:background="@drawable/btn_style"
                android:textColor="@drawable/txt_btn_style"/>

            <Button
                android:id="@+id/button19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:onClick="Cancel_Button"
                android:text="@string/Cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:background="@drawable/btn_style"
                android:textColor="@drawable/txt_btn_style"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>